Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11538

xtrabackup_logfile is not encrypted with innodb-encrypt-log=ON

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • N/A
    • Backup
    • None

    Description

      This was mentioned earlier, but I create ticket to make sure it is prioritized properly.

      Following test demonstrates the problem:

      1. Create table and insert some large strings on server with innodb-encrypt-log=ON1:
      CREATE TABLE test (a varchar(255));
      INSERT INTO test VALUES (repeat('a',200));
      insert into test select * from test;
      insert into test select * from test;
      insert into test select * from test;

      2. Open ib_logfile* in text editor and try to find strings like 'aaaaaaaaaaa' - there is none. This indicates that log is encrypted

      3. Create backup

      4. Open xtrabackup_logfile in text editor and observe may strings 'aaaaaaaaaaa....'

      This indicates that xtrabackup_logfile has data which is not encrypted.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            anikitin Andrii Nikitin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.